--- a/addon/locale/bg/LC_MESSAGES/nvda.po
+++ b/addon/locale/bg/LC_MESSAGES/nvda.po
@@ -6,16 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: lambda 1.1.8\n"
-"Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
+"Report-Msgid-Bugs-To: nvda-translations@groups.io\n"
 "POT-Creation-Date: 2017-06-20 06:07+1000\n"
-"PO-Revision-Date: 2018-06-29 23:23+0200\n"
+"PO-Revision-Date: 2019-03-10 15:14+0200\n"
 "Last-Translator: Kostadin Kolev <k_kolev1985@mail.bg>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.11\n"
+"X-Generator: Poedit 1.6.10\n"
 
 #. Translators: Message presented in input help mode.
 msgid "Shows a dialog to revert lambda profile options to the default."
@@ -130,7 +130,7 @@ msgstr ""
 "добавката на конфигурационния профил за LAMBDA.\n"
 "Моля, прегледайте настройките по подразбиране за тази добавка, като "
 "използвате \"Съветник за възстановяване на профила за LAMBDA\" (чрез "
-"натискане на NVDA+Alt+R) докато приложението LAMBDA е на фокус.\n"
+"натискане на NVDA+Alt+R), докато приложението LAMBDA е на фокус.\n"
 "Задействайте бутона OK, за да завършите настройката на добавката.\n"
 
 #. Add-on summary, usually the user visible name of the addon.
