--- a/addon/locale/da/LC_MESSAGES/nvda.po
+++ b/addon/locale/da/LC_MESSAGES/nvda.po
@@ -6,16 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: lambda 1.1.8\n"
-"Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
+"Report-Msgid-Bugs-To: nvda-translations@groups.io\n"
 "POT-Creation-Date: 2017-06-20 06:07+1000\n"
-"PO-Revision-Date: 2019-01-14 12:34+0100\n"
+"PO-Revision-Date: 2020-07-13 15:57+0200\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: Nicolai Svendsen <chojiro1990@gmail.com>\n"
 "Language-Team: Dansk NVDA <dansk@nvda.dk>\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.3.1\n"
 
 #. Translators: Message presented in input help mode.
 msgid "Shows a dialog to revert lambda profile options to the default."
@@ -41,11 +41,11 @@ msgstr "Duplikere den aktuelle linje og placerer markøren på den næste linje.
 
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
 msgid "flat mode "
-msgstr "Flat mode"
+msgstr "Flad tilstand"
 
 #. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
 msgid "Toggle the braille flat mode on or off."
-msgstr "Slå flat mode til punkt til og fra"
+msgstr "Slå flad tilstand til punkt til og fra"
 
 msgid ""
 "Duplicate lines using control+d shortcut may causes error or stability "
