--- a/addon/locale/hr/LC_MESSAGES/nvda.po
+++ b/addon/locale/hr/LC_MESSAGES/nvda.po
@@ -7,15 +7,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: lambda 1.1.8\n"
-"Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
+"Report-Msgid-Bugs-To: nvda-translations@groups.io\n"
 "POT-Creation-Date: 2017-06-20 06:07+1000\n"
-"PO-Revision-Date: 2019-11-22 23:20+0100\n"
+"PO-Revision-Date: 2020-03-13 17:23+0100\n"
 "Last-Translator: Milo Ivir <mail@milotype.de>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 "Language-Team: \n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
@@ -54,7 +54,7 @@ msgid ""
 "issues while using Lambda with NVDA.\n"
 "Please consider using the NVDA+D shortcut instead."
 msgstr ""
-"Dupliciranje redaka pomoću prečaca CTRL+D može prouzročiti greške ili "
+"Dupliciranje redaka pomoću prečaca kontrol+D može prouzročiti greške ili "
 "nestabilnost tijekom korištenja Lambde s NVDA čitačem.\n"
 "Umjesto toga koristite prečac NVDA+D."
 
