--- a/addon/locale/pt_BR/LC_MESSAGES/nvda.po
+++ b/addon/locale/pt_BR/LC_MESSAGES/nvda.po
@@ -1,60 +1,62 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the lambda package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Brazilian Portuguese translation of lambda.
+# Copyright (C) 2020 NVDA Contributors.
+# This file is distributed under the same license as the NVDA package.
+# Ângelo Abrantes <ampa4374@gmail.com>, 2017, 2020.
+# Tiago Melo Casal <tcasal@intervox.nce.ufrj.br>, 2020.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: lambda 1.1.8\n"
+"Project-Id-Version: lambda\n"
 "Report-Msgid-Bugs-To: nvda-translations@groups.io\n"
-"POT-Creation-Date: 2017-06-20 06:07+1000\n"
-"PO-Revision-Date: 2018-11-01 14:05+0100\n"
-"Language: de_CH\n"
+"POT-Creation-Date: 2020-01-03 12:00+1000\n"
+"PO-Revision-Date: 2020-04-04 00:10-0300\n"
+"Last-Translator: Tiago Melo Casal <tcasal@intervox.nce.ufrj.br>\n"
+"Language-Team: NVDA Brazilian Portuguese translation team (Equipe de "
+"tradução do NVDA para Português Brasileiro) <clever97@gmail.com>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: Robert Hänggi <aarjay.robert@gmail.com>\n"
-"Language-Team: \n"
-"X-Generator: Poedit 2.2\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Generator: Poedit 2.3\n"
 
 #. Translators: Message presented in input help mode.
 msgid "Shows a dialog to revert lambda profile options to the default."
 msgstr ""
-"Zeigt ein Dialog für das Zurücksetzen der Profileinstellungen auf "
-"Standardzustand"
+"Mostra um diálogo para reverter as opções do perfil lambda para o padrão."
 
 #. Translators: this is a custom implementation of the globalCommands gesture, it doesn't support spelling.
 msgid "Reports the current line under the application cursor."
-msgstr "Sagt die aktuelle Zeile unter dem Anwendungscursor an."
+msgstr "Informa a linha atual sob o cursor do aplicativo."
 
 #. Translators: Lambda can't read from the current caret position, the implementation of sayAll provided starts reading from the top of the document.
 msgid "reads from the beginning of the document up to the end of the text."
-msgstr "Liest das Dokument vom Anfang bis Ende vor."
+msgstr "lê desde o início do documento até o final do texto."
 
 #. Translators: this is a custom implementation of the globalCommands gesture.
 msgid "Announces the current selection in edit controls and documents."
-msgstr "Sagt die aktuelle Auswahl in Eingabefeldern und Dokumenten an."
+msgstr "Anuncia a seleção atual em controles de edição e documentos."
 
 #. This script duplicates the current line and announce it
 msgid "Duplicate the current line and sets the cursor to the new line."
-msgstr "Dupliziert die aktuelle Zeile und setzt den Cursor in die neue Zeile."
+msgstr "Duplica a linha atual e defina o cursor para a nova linha."
 
 #. Translators: This determines whether to use API or DisplayMode to render the editor window on a braille display. It is a toggle (on/off)
 msgid "flat mode "
-msgstr "Flächenmodus"
+msgstr "modo extenso "
 
 #. This script set the desired textInfo for braille, when flat mode is on, the LambdaEditorFlatTextInfo is used, otherwise the LambdaEditorTextInfo is set.
 msgid "Toggle the braille flat mode on or off."
-msgstr "stelt den Flächenmodus in braille an oder aus."
+msgstr "Alternar entre ligado ou desligado o modo extenso em braille."
 
 msgid ""
 "Duplicate lines using control+d shortcut may causes error or stability "
 "issues while using Lambda with NVDA.\n"
 "Please consider using the NVDA+D shortcut instead."
 msgstr ""
-"Duplizieren von  Zeilen mit control+d kann Fehler oder Stabilitätsprobleme "
-"bei der Verwendung von Lambda mit NVDA verursachen. Bitte denken Sie daran, "
-"stattdessen den Tastenkürzel NVDA+D zu verwenden."
+"Duplicar linhas usando o atalho control+d pode causar problemas de erros ou "
+"instabilidade ao usar Lambda com NVDA.\n"
+"Por favor considere usar o atalho NVDA+D em seu lugar."
 
 #. Translators: This string is the file name of the Lambda braille table for the translated language. The file should be present in the "brailleTables" directory in this addon. The default is the italian braille translation table.
 msgid "lambda-ita.utb"
@@ -63,40 +65,40 @@ msgstr "lambda-ita.utb"
 #. Translators: This is the label for the Quick Profile Wizard dialog.
 #. This dialog helps the user to reset relevant profile options without deleting his custom settings.
 msgid "Revert LAMBDA Profile Wizard"
-msgstr "Dialog für Lambda-Profil zurücksetzen"
+msgstr "Assistente para Reverter o Perfil do LAMBDA"
 
 #. Translators: This is the static text of the Quick Profile Wizard dialog.
 msgid ""
 "Choose which options you want to reset to the default value for the Lambdas "
 "profile"
 msgstr ""
-"Wähle aus, welche Einstellungen aus dem Lambda-Profil zum Standard "
-"zurückgesetzt werden sollen"
+"Escolha quais as opções que deseja redefinir para o valor padrão para o "
+"perfil do Lambda"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 #, python-format
 msgid "Keep the LAMBDA braille table for the current language (%s)"
-msgstr "Behalte die Lambda-Brailletabelle für die aktuelle Sprache (%s)"
+msgstr "Mantenha a tabela braille LAMBDA para o idioma atual (%s)"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Set the braille cursor to tether the focus"
-msgstr "Braille-Cursor folgt Fokus"
+msgstr "Defina o cursor braille para seguir o foco"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Disable the Braille reading by paragraph"
-msgstr "Deaktiviere Braile absatzweise lesen"
+msgstr "Desabilitar a leitura Braille por parágrafo"
 
 #. Translators: This is the label for a checkbox in the
 #. Quick Profile Wizard dialog.
 msgid "Disable word wrappping of the braille line"
-msgstr "Deaktiviere Zeilenumbrüche der Zeile"
+msgstr "Desabilitar quebra de linha da linha em braille"
 
 #. Translators: title of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
 msgid "Incompatible version of the addon detected"
-msgstr "Inkompatible Version dieser Erweiterung gefunden"
+msgstr "Detectada Uma versão incompatível do complemento"
 
 #. Translators: text of the message box that appears when the user is installing the addon and an older version prevents the update to be completed.
 msgid ""
@@ -105,14 +107,14 @@ msgid ""
 "Please uninstall the previous version before proceeding with the Lambda "
 "addon setup.\n"
 msgstr ""
-"Es wurde eine alte, inkompatible Version dieser  Erweiterung gefunden.\n"
-"Dies verhindert die Fertigstellung der Installation.\n"
-"Bitte deinstallieren Sie die vorherige Version bevor Sie mit der "
-"Installation der Lambda-Erweiterung fortfahren.\n"
+"Uma versão antiga e incompatível deste complemento foi detectada.\n"
+"Isso impede que a instalação seja concluída.\n"
+"Desinstale a versão anterior antes de prosseguir com a instalação do "
+"complemento Lambda.\n"
 
 #. Translators: title of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
 msgid "lambda profile already exists"
-msgstr "Lambda-Profil existiert bereits"
+msgstr "o perfil lambda já existe"
 
 #. Translators: text of the message box that appears when user is installing the addon in NVDA and a "lambda" profile is already present.
 msgid ""
@@ -124,18 +126,19 @@ msgid ""
 "Wizard (pressing nvda+alt+r) while the Lambda Application is active.\n"
 "Press OK to complete the addon Setup.\n"
 msgstr ""
-"Ein weiteres Profil mit dem Namen\"Lambda\" ist bereits in Ihrer NVDA-"
-"Konfiguration vorhanden. \n"
-"Dies kann zu fehlerhaften Konfigurationen des Lambda-Profils führen. \n"
-"Bitte überprüfen Sie die Standardoptionen für diese Erweiterung mit Hilfe "
-"des LAMBDA-Profil-Assistenten (Drücken von nvda+alt+r), während die Lambda-"
-"Anwendung aktiv ist. \n"
-"Drücken Sie OK, um das Addon-Setup abzuschliessen. \n"
+"Outro perfil chamado \"lambda\" já está presente na sua configuração do "
+"NVDA. \n"
+"Isso pode impedir o complemento de criar e configurar o perfil lambda "
+"corretamente.\n"
+"Revise as opções padrão para este complemento usando o Assistente para "
+"Reverter Perfil LAMBDA (pressionando nvda+alt+r) enquanto o Aplicativo "
+"Lambda estiver ativo.\n"
+"Pressione OK para completar a configuração do complemento.\n"
 
 #. Add-on summary, usually the user visible name of the addon.
 #. Translators: Summary for this add-on to be shown on installation and add-on information.
 msgid "Lambda math editor addon"
-msgstr "Erweiterung für den Mathematik-Editor Lambda"
+msgstr "Complemento do editor de matemática Lambda"
 
 #. Add-on description: can span multiple lines with """ syntax """
 #. Translators: Long description to be shown for this add-on on add-on information from add-ons manager
@@ -143,5 +146,5 @@ msgid ""
 "This addon provides access to the Lambda math editor with both braille and "
 "speech support."
 msgstr ""
-"Diese Erweiterung ermöglicht den Zugang zum Mathematikeditor Lambda mit "
-"Braille- und Sprachunterstützung"
+"Este complemento fornece acesso ao editor de matemática Lambda com suporte "
+"para braille e fala."
